--- a/index2.html
+++ b/index2.html
@@ -55,7 +55,7 @@
               
               <div class="content">
                 <h3 class="ui header blue">Publicar no Facebook</h3>
-                <div class="fb-comments" data-href="https://charlesjeanrj.github.io/teste/av2/index2.html" data-numposts="10" data-width="100%"></div>
+                <div class="fb-comments" data-href="https://matheuspinheirolasalle.github.io/TestePage/index2.html" data-numposts="10" data-width="100%"></div>
               </div>
             </div>
           </div>
