--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
               <div class="content">
                 <img id="avatar" class="ui avatar image left floated" style="width: 45px; height: 45px;"
                   src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/a-star-is-born-lady-gaga-1539025433.jpeg?crop=0.621xw:0.931xh;0.255xw,0.0689xh&resize=768:*"> 
-                <h4 id="nome" class="left floated">Grassi</h4>
-                <h4 class="right floated meta" id="data">16 de nov de 2018</h4>
+                <h4 id="nome" class="left floated">Karolyne Pontes</h4>
+                <h4 class="right floated meta" id="data">19 de Junho de 2019</h4>
               </div>
               <div class="ui video">
                 <iframe id="video" width="100%" height="415" src="https://www.youtube.com/embed/X8HzZPCiNKY"></iframe>
               </div>
               <div class="content">
                 <div class="ui header yellow" id="titulo">
-                  Google Apresentações - Introdução
+                  Google Apresentações - Tutorial de como criar uma nova apresentação e escolher temas.
                 </div>
                 <div class="meta">
                   <div class="description" id="decricao">
-                    Uma breve introdução sobre o que é o Google Apresentações
+                   Será ensinado nesse tutoria como fazer uma apresentação e como personalizar a mesma. Para tornar ela melhor.
                   </div>
                 </div>
                 <div class="floated meta" style="padding-top:25px;">
@@ -64,3 +64,4 @@
     </div>
   </body>
 </html>
+
