--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <h4 class="right floated meta" id="data">19 de Junho de 2019</h4>
               </div>
               <div class="ui video">
-                <iframe id="video" width="100%" height="415" src="https://youtu.be/2hcSDi1iVks"></iframe>
+                <iframe id="video" width="100%" height="415" src="https://www.youtube.com/embed/2hcSDi1iVks"></iframe>
               </div>
               <div class="content">
                 <div class="ui header yellow" id="titulo">
